<?xml version="1.0"?>
<package>
  <name>nrp_ros_python_bindings</name>
  <version>1.0.0</version>
  <description>
    Boost python bindings genaration for ros msgs in nrp-core. This package is a modified version of: boost_python_ros,
    stored at https://github.com/bhaskara/boost_python_ros and authored by Bhaskara Marthi.
  </description>

  <author>NRPTeam</author>
  <maintainer email="todo@todo.org">NRPTeam</maintainer>
  <license>BSD, Apache 2.0</license>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nrp_ros_msgs</build_depend>

  <run_depend>nrp_ros_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>

